--- a/src/content/pages/Gutter-Guards.html
+++ b/src/content/pages/Gutter-Guards.html
@@ -46,13 +46,12 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <h2 class="cs-title">Gutter Guard Installation</h2>
-            <p class="cs-text">
-               Are you tired of having to constantly clean leaf, foliage, and sediment buildup out of your gutters? If so, installing a gutter guard is a great way to keep water flowing freely without risking climbing up a ladder.
-          <p>         Gutter guards are a barrier placed over your gutter. This barrier helps shield your gutter from leaves, pine needles, pests, roof shingle granules, and more from clogging your gutter system.
-
-
-
- </p>
+     <p class="cs-text">
+              Are you tired of the endless cycle of gutter cleaning, constantly battling against leaf, foliage, and sediment buildup? Say goodbye to the hassle and risk of climbing ladders with No Leak Gutters' top-of-the-line gutter guard installation services.
+          <p class="cs-text">       Gutter guards are the ultimate solution to keeping your gutters free-flowing and debris-free. Acting as a protective barrier, gutter guards prevent leaves, pine needles, pests, roof shingle granules, and other debris from clogging your gutter system. With our expertly installed gutter guards, you can enjoy peace of mind knowing that your gutters are safeguarded against blockages and potential water damage to your home's foundation, roof, and siding. </p>
+            <p class="cs-text"> Our team of skilled professionals will work closely with you to assess your property, recommend the best gutter guard system for your home, and ensure flawless installation for optimal performance.
+            <p class="cs-text">Don't let clogged gutters wreak havoc on your home's exterior and compromise its structural integrity. Invest in the protection and peace of mind that gutter guards provide with No Leak Gutters' expert installation services. Contact us today to schedule a consultation and take the first step toward a maintenance-free gutter system that will keep your home safe and beautiful for years to come!
+          </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
