--- a/src/content/pages/Gutter-Repair.html
+++ b/src/content/pages/Gutter-Repair.html
@@ -46,10 +46,11 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <h2 class="cs-title">Gutter Repair Services</h2>
-            <p class="cs-text">
-                No Leak Gutters offers gutter repair services to address issues, such as clogged and damaged systems. Our team of experts will identify the root cause of the issues and create a comprehensive report on whether your current system can be repaired or if it needs replaced.
-          <p class="cs-text">         Our #1 goal is to effectively and efficiently get water flowing correctly so your property is protected from water damage.</p>
-           <p class="cs-text"> Over the years we perfected our own custom corners. Throw away the miters and other connections and let us cut our corners to the shape your home needs. Giving you a premium look for an affordable price 
+         <p class="cs-text">
+             Experience the difference with No Leak Gutters' professional gutter repair services, designed to tackle common issues such as clogs and damages that compromise your gutter system's performance and integrity. Our team of skilled experts will conduct a thorough assessment to identify the root cause of the problem and provide you with a comprehensive report outlining the necessary repairs or replacement options.
+          <p class="cs-text">       At No Leak Gutters, our top priority is to restore proper water flow and ensure your property is effectively protected from potential water damage. With our expertise and commitment to quality, you can trust that your gutter repair needs will be addressed promptly and efficiently. </p>
+            <p class="cs-text">Plus, benefit from our exclusive custom corner solutions created in-house that eliminates the need for traditional miters and connections. Our custom-cut corners are tailored to fit your home's unique specifications, delivering a premium finish at an affordable price. Say goodbye to unsightly joints and hello to seamless gutter performance with No Leak Gutters' innovative repair solutions.
+            <p class="cs-text">Don't let gutter issues compromise the safety and beauty of your home any longer. Contact us today to schedule a consultation and discover why No Leak Gutters is the trusted choice for all your gutter repair needs!
           </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
@@ -57,9 +58,9 @@ eleventyNavigation:
         </div>
         <div class="cs-image-group">
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/Banner1.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/Banner1.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Banner1.jpg" alt="yard" width="558" height="496">
+                <source media="(max-width: 600px)" srcset="/assets/images/repair2.png">
+                <source media="(min-width: 601px)" srcset="/assets/images/repair2.png">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/repair2.png" alt="yard" width="558" height="496">
             </picture>
           
             
