--- a/src/content/pages/Soffit-Installation.html
+++ b/src/content/pages/Soffit-Installation.html
@@ -46,18 +46,21 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <h2 class="cs-title">Soffit Installation Services</h2>
-            <p class="cs-text">
-                Seamless gutters are a special type of gutter system that capture and redirect the flow of water. These gutter systems are often made of aluminum and come in a wide variety of colors that blend seamlessly into your home.
-          <p>         Compared to traditional gutters, seamless gutter systems eliminate seams along the gutter. This helps prevent leaks that can lead to costly property damage, foundation issues, and destroyed landscaping. We match our valleys at every corner so that your home has a seamless premium look.   </p>
+         <p class="cs-text">
+             Looking to enhance your home's curb appeal and protect it from the elements? Turn to No Leak Gutters for professional soffit installation services tailored to your needs. Our skilled team specializes in installing high-quality soffits that not only add beauty to your home but also provide essential protection against moisture, pests, and structural damage.
+          <p class="cs-text">       Soffits play a vital role in maintaining the integrity of your roof and attic by preventing water infiltration, minimizing heat buildup, and promoting proper ventilation. Whether you're building a new home or renovating an existing one, our experts can help you choose the right soffit materials and designs to complement your home's style and architecture. </p>
+            <p class="cs-text"> At No Leak Gutters, we take pride in our commitment to quality and customer satisfaction. Our factory-certified professionals utilize the latest techniques and industry-leading products to ensure flawless soffit installations that stand the test of time. With our attention to detail and dedication to excellence, you can trust that your home will be in good hands every step of the way.
+            <p class="cs-text">Don't settle for subpar soffit installations that compromise your home's protection and aesthetics. Invest in the best with No Leak Gutters and enjoy peace of mind knowing your home is safeguarded for years to come. Contact us today for a consultation and discover the difference our soffit installation services can make for your home
+          </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
             </div>
         </div>
         <div class="cs-image-group">
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/Soffit1.png">
-                <source media="(min-width: 601px)" srcset="/assets/images/Soffit1.png">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Soffit1.png" alt="yard" width="558" height="496">
+                <source media="(max-width: 600px)" srcset="/assets/images/Header.png">
+                <source media="(min-width: 601px)" srcset="/assets/images/Header.png">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Header.png" alt="yard" width="558" height="496">
             </picture>
           
             
