--- a/src/content/pages/Soffit-Repair.html
+++ b/src/content/pages/Soffit-Repair.html
@@ -45,13 +45,13 @@ eleventyNavigation:
 <section id="sbs-418">
     <div class="cs-container">
         <div class="cs-content">
-            <h2 class="cs-title">Soffit Repair Services</h2>
+            <h2 class="cs-title">Soffit Repair</h2>
             <p class="cs-text">
               Are you tired of dealing with damaged or deteriorating soffits that detract from the appearance and functionality of your home? Look no further than No Leak Gutters for expert soffit repair services that address common issues and complaints head-on.
-          <p>        Soffits play a crucial role in protecting your home's roof and attic from moisture, pests, and other environmental hazards. Over time, they can suffer from a variety of problems, including rot, water damage, mold growth, and pest infestations. These issues not only compromise the structural integrity of your home but also detract from its aesthetic appeal.
-            <p> At No Leak Gutters, our team of skilled professionals specializes in diagnosing and repairing soffit problems efficiently and effectively. Whether it's replacing rotted or damaged sections, addressing water infiltration issues, or mitigating pest infestations, we have the expertise and resources to restore your soffits to their optimal condition.
-            <p> We understand that every home is unique, which is why we tailor our repair solutions to meet your specific needs and budget. Using high-quality materials and proven repair techniques, we ensure that your soffits not only look great but also provide long-lasting protection for your home
-             <p> Don't let damaged soffits compromise the integrity and beauty of your home any longer. Trust the experts at No Leak Gutters to deliver reliable and affordable soffit repair solutions that stand the test of time. Contact us today to schedule a consultation and take the first step toward restoring your home's exterior to its former glory.    
+          <p class="cs-text">        Soffits play a crucial role in protecting your home's roof and attic from moisture, pests, and other environmental hazards. Over time, they can suffer from a variety of problems, including rot, water damage, mold growth, and pest infestations. These issues not only compromise the structural integrity of your home but also detract from its aesthetic appeal. </p>
+            <p class="cs-text"> At No Leak Gutters, our team of skilled professionals specializes in diagnosing and repairing soffit problems efficiently and effectively. Whether it's replacing rotted or damaged sections, addressing water infiltration issues, or mitigating pest infestations, we have the expertise and resources to restore your soffits to their optimal condition.
+            <p class="cs-text"> We understand that every home is unique, which is why we tailor our repair solutions to meet your specific needs and budget. Using high-quality materials and proven repair techniques, we ensure that your soffits not only look great but also provide long-lasting protection for your home
+             <p class="cs-text"> Don't let damaged soffits compromise the integrity and beauty of your home any longer. Trust the experts at No Leak Gutters to deliver reliable and affordable soffit repair solutions that stand the test of time. Contact us today to schedule a consultation and take the first step toward restoring your home's exterior to its former glory.    
           </p>
             <div class="cs-button-group">
                 <a href="/contact" class="cs-button-solid">Scheudle FREE Consultation</a>
@@ -59,9 +59,9 @@ eleventyNavigation:
         </div>
         <div class="cs-image-group">
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/Soffit-Repair.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/Soffit-Repair.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Soffit-Repair.jpg" alt="yard" width="558" height="496">
+                <source media="(max-width: 600px)" srcset="/assets/images/Repair.jpg">
+                <source media="(min-width: 601px)" srcset="/assets/images/Repair.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Repair.jpg" alt="yard" width="558" height="496">
             </picture>
           
             
