--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -43,7 +43,7 @@ permalink: 'contact/'
                 Service Address
                 <input class="cs-input" required type="text" id="Address-1525" name="Address" placeholder="Address">
             </label>
-            <label for="" class="cs-label">
+            <label for="input" class="cs-label">
             How Can We Help You?
                 <select class="cs-select" name="Service" id="classes-1525">
                     <option value="Gutter Installation">Gutter Installation</option>
@@ -53,6 +53,7 @@ permalink: 'contact/'
                     <option value="Soffit Installation">Soffit Installation</option>
                     <option value="Soffit Repair">Soffit Repair</option>
                     <option value="Soffit Repair">Full Gutter + Soffit Job</option>
+                    <option value="Soffit Repair">Warranty Claim</option>
                 </select>
             </label>
             <label class="cs-label cs-message">
