--- a/src/index.html
+++ b/src/index.html
@@ -125,9 +125,9 @@ well as all surrounding areas.
             <li class="cs-item">
                 <a href="/Seamless-Gutter-Systems" class="cs-link">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/Picture1.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/Picture1.jpg">
-                        <img loading="lazy" decoding="async" src="/assets/images/Picture1.jpg" alt="cleaner" width="413" height="240" aria-hidden="true">
+                        <source media="(max-width: 600px)" srcset="/assets/images/Seamless.png">
+                        <source media="(min-width: 601px)" srcset="/assets/images/seamless.png">
+                        <img loading="lazy" decoding="async" src="/assets/images/seamless.png" alt="cleaner" width="413" height="240" aria-hidden="true">
                     </picture>
                     <h3 class="cs-h3">Seamless Gutter Installation</h3>
                     <p class="cs-item-text">
@@ -139,9 +139,9 @@ well as all surrounding areas.
               <li class="cs-item">
                 <a href="/Soffit-Installation" class="cs-link">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/soffit1.png">
-                        <source media="(min-width: 601px)" srcset="/assets/images/soffit1.png">
-                        <img loading="lazy" decoding="async" src="/assets/images/soffit1.png" alt="cleaner" width="413" height="240" aria-hidden="true">
+                        <source media="(max-width: 600px)" srcset="/assets/images/Header.png">
+                        <source media="(min-width: 601px)" srcset="/assets/images/Header.png">
+                        <img loading="lazy" decoding="async" src="/assets/images/Header.png" alt="cleaner" width="413" height="240" aria-hidden="true">
                     </picture>
                     <h3 class="cs-h3">Soffit Installation</h3>
                     <p class="cs-item-text">
@@ -168,9 +168,9 @@ well as all surrounding areas.
               <li class="cs-item">
                 <a href="/Gutter-Repair" class="cs-link">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/Repair.jpg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/Repair.jpg">
-                        <img loading="lazy" decoding="async" src="/assets/images/Repair.jpg" alt="cleaner" width="413" height="240" aria-hidden="true">
+                        <source media="(max-width: 600px)" srcset="/assets/images/Repair2.png">
+                        <source media="(min-width: 601px)" srcset="/assets/images/Repair2.png">
+                        <img loading="lazy" decoding="async" src="/assets/images/Repair2.png" alt="cleaner" width="413" height="240" aria-hidden="true">
                     </picture>
                     <h3 class="cs-h3">Gutter Repair</h3>
                     <p class="cs-item-text">
@@ -273,7 +273,7 @@ well as all surrounding areas.
                 <div class="cs-flex-group">
                     <span class="cs-name">
                          Mark S
-                        <span class="cs-job">Customer</span>
+                        <span class="cs-job">Builder</span>
                     </span>
                 </div>
                 <div class="wrapper">
@@ -289,7 +289,7 @@ well as all surrounding areas.
                 <div class="cs-flex-group">
                     <span class="cs-name">
                         Britney A
-                        <span class="cs-job">Builder</span>
+                        <span class="cs-job">Customer</span>
                     </span>
                 </div>
                 <div class="wrapper">
