--- a/src/content/pages/Soffit-Repair.html
+++ b/src/content/pages/Soffit-Repair.html
@@ -59,9 +59,9 @@ eleventyNavigation:
         </div>
         <div class="cs-image-group">
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/Repair.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/Repair.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Repair.jpg" alt="yard" width="558" height="496">
+                <source media="(max-width: 600px)" srcset="/assets/images/Gutter-Repair.png">
+                <source media="(min-width: 601px)" srcset="/assets/images/Gutter-Repair.png">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Gutter-Repair.png" alt="yard" width="558" height="496">
             </picture>
           
             
