--- a/src/content/pages/projects.html
+++ b/src/content/pages/projects.html
@@ -39,17 +39,17 @@ eleventyNavigation:
             <!-- Image 1 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/Pic1.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Pic1.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/Pic1.jpg" alt="fancy house" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic13.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic13.png">
+                    <img loading="lazy" decoding="async" src="/assets/images/Pic13.png" alt="fancy house" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 2 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/Pic2.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Pic2.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/Pic2.jpg" alt="modern house" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic12.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic12.png">
+                    <img loading="lazy" decoding="async" src="/assets/images/Pic12.png" alt="modern house" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 3 -->
@@ -63,9 +63,9 @@ eleventyNavigation:
             <!-- Image 4 -->
             <li class="cs-item">
                 <picture class="cs-picture">
-                    <source media="(max-width: 600px)" srcset="/assets/images/Pic4.jpg">
-                    <source media="(min-width: 601px)" srcset="/assets/images/Pic4.jpg">
-                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic4.jpg" alt="modern home" width="346" height="346">
+                    <source media="(max-width: 600px)" srcset="/assets/images/Pic14.png">
+                    <source media="(min-width: 601px)" srcset="/assets/images/Pic14.png">
+                    <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/Pic14.png" alt="modern home" width="346" height="346">
                 </picture>
             </li>
             <!-- Image 5 -->
