--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@ eleventyNavigation:
                 Serving Floridans with <i>quality</i> gutters since 2009
             </p>
             <a href="/contact" class="cs-button-solid">Free Estimate</a>
-            <a href="" class="cs-button-transparent">
+            <a href="tel:941-564-7856" class="cs-button-transparent">
                 <img class="cs-img" loading="lazy" decoding="async" src="/assets/images/Phone1.svg" alt="play icon" width="17" height="17">
                (941) 564-7856
             </a>
