--- a/src/content/pages/Gutter-Cleaning.html
+++ b/src/content/pages/Gutter-Cleaning.html
@@ -1,6 +1,6 @@
 ---
 title: 'Gutter-Cleaning'
-description: 'Meta description for the page'
+description: "Keep your gutters flowing smoothly with No Leak Gutters' professional cleaning services. Our expert team in Florida ensures your home is protected from water damage, treating your property with the utmost care."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Gutter-Cleaning/'
 eleventyNavigation:
