--- a/src/content/pages/Gutter-Guards.html
+++ b/src/content/pages/Gutter-Guards.html
@@ -1,6 +1,14 @@
 ---
 title: 'Gutter-Guards'
-description: 'Meta description for the page'
+description: "Say goodbye to clogged gutters with No Leak Gutters' robust gutter guards. Expertly installed to shield your home in Florida from debris and water damage, ensuring year-round protection and ease.
+
+
+
+
+
+
+
+"
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Gutter-Guards/'
 eleventyNavigation:
