--- a/src/content/pages/Gutter-Repair.html
+++ b/src/content/pages/Gutter-Repair.html
@@ -1,6 +1,6 @@
 ---
 title: 'Gutter-Repair'
-description: 'Meta description for the page'
+description: "Trust No Leak Gutters for expert gutter repair, ensuring your home in Florida stays protected from water damage. Our skilled team offers quick, reliable solutions to keep your gutters in top condition."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Gutter-Repair/'
 eleventyNavigation:
