--- a/src/content/pages/Seamless-Gutter-Systems.html
+++ b/src/content/pages/Seamless-Gutter-Systems.html
@@ -1,6 +1,6 @@
 ---
 title: 'Seamless-Gutter-Systems'
-description: 'Meta description for the page'
+description: 'Upgrade to seamless gutter systems with No Leak Gutters and enjoy superior protection for your Florida home. Our seamless solutions offer enhanced durability, efficiency, and aesthetics, ensuring your property remains safe and stylish.'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Seamless-Gutter-Systems/'
 eleventyNavigation:
