--- a/src/content/pages/Soffit-Installation.html
+++ b/src/content/pages/Soffit-Installation.html
@@ -1,6 +1,6 @@
 ---
 title: 'Soffit-Installation'
-description: 'Meta description for the page'
+description: "Elevate your home's functionality and curb appeal with No Leak Gutters' professional soffit installation services. Our skilled team in Florida ensures optimal ventilation and a polished look, contributing to your home's longevity and beauty."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Soffit-Installation/'
 eleventyNavigation:
