--- a/src/content/pages/Soffit-Repair.html
+++ b/src/content/pages/Soffit-Repair.html
@@ -1,6 +1,6 @@
 ---
 title: 'Soffit-Repair'
-description: 'Meta description for the page'
+description: "Keep your home in prime condition with No Leak Gutters' soffit repair services. Our experienced Florida team provides thorough repairs to ensure your soffits support proper ventilation and enhance your home's exterior, safeguarding against damage and decay."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Soffit-Repair/'
 eleventyNavigation:
