--- a/src/content/pages/Warranty.html
+++ b/src/content/pages/Warranty.html
@@ -1,6 +1,6 @@
 ---
 title: 'Warranty'
-description: 'Meta description for the page'
+description: "At No Leak Gutters, we stand behind our work with a robust warranty. Learn about our commitment to quality and customer satisfaction, offering peace of mind with every gutter and soffit service in Florida. Your home's protection is guaranteed."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'Warranty/'
 eleventyNavigation:
