--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 ---
 title: 'About'
-description: 'Meta description for the page'
+description: "At No Leak Gutters, 'Treating Your Home Like Our Own' isn't just a motto, it's our promise. Learn about our commitment to excellence and the personalized care we provide for every gutter and soffit project in Sarasota, Charlotte County, and beyond."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'about/'
 eleventyNavigation:
