--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,6 +1,6 @@
 ---
 title: 'Contact'
-description: 'Meta description for the page'
+description: "Ready to protect your home? Contact No Leak Gutters today. Whether you're in Sarasota, Charlotte County, or nearby, we're here to answer your questions and offer the best gutter solutions tailored to your needs."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'contact/'
 ---
