--- a/src/content/pages/projects.html
+++ b/src/content/pages/projects.html
@@ -1,6 +1,6 @@
 ---
 title: 'Projects'
-description: 'Meta description for the page'
+description: 'Explore the No Leak Gutters Gallery to see the difference our expertise makes. From seamless installations to detailed repairs, our Florida-based projects highlight our commitment to quality and customer satisfaction.'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'projects/'
 eleventyNavigation:
