--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,6 +1,6 @@
 ---
 title: 'Reviews'
-description: 'Meta description for the page'
+description: "Discover why Florida homeowners choose No Leak Gutters. Our Reviews page features real feedback from satisfied customers in Sarasota, Charlotte County, and beyond, showcasing our commitment to excellence and trusted service."
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'reviews/'
 eleventyNavigation:
