--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
-title: 'Pixel Perfect Websites'
-description: 'Meta description for the page'
+title: 'Quality Gutter Installation'
+description: "Discover the peace of mind that comes with a home protected by No Leak Gutters, your neighborhood experts in flawless gutter and soffit installations across Florida. Embrace the elegance and efficiency of our seamless gutter systems, crafted to safeguard your home against the elements. From tailored soffit solutions to precision aluminum repairs and meticulous gutter cleanings, we're here to ensure your home's longevity and curb appeal. Serving the heart of Sarasota, the breadth of Charlotte County, and beyond, No Leak Gutters is your partner in maintaining a pristine and damage-free home environment."
 preloadImg: '/assets/images/landing.jpg'
 permalink: '/'
 eleventyNavigation:
