--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -49,7 +49,7 @@ eleventyNavigation:
 The crew from No Leak Gutters did an excellent job on my gutter repair project. They were courteous, hardworking, and completed the job in a timely manner. Thank you. 
                 </p>
                 <div class="star-group">
-                    <span class="name">Jessica L<span class="desc">Homeowner</span></span>
+                    <span class="name">Jessica L</span>
                     <picture>
                         <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                     </picture>
@@ -60,7 +60,7 @@ The crew from No Leak Gutters did an excellent job on my gutter repair project. 
                     Nick and his team did a great job on my gutter guard installation. Happy with the outcome and the working with my schedule 
                 </p>
                 <div class="star-group">
-                    <span class="name">Tyler R<span class="desc">Homeowner</span></span>
+                    <span class="name">Tyler R</span>
                     <picture>
                         <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                     </picture>
@@ -72,7 +72,7 @@ The crew from No Leak Gutters did an excellent job on my gutter repair project. 
                     I had the pleasure of working with Nick and his team for a gutter installation project. From start to finish, they were attentive to my needs and delivered exceptional results. If I had more houses I would make sure to hire them. 
                 </p>
                 <div class="star-group">
-                    <span class="name">Andrew G<span class="desc">Homeowner</span></span>
+                    <span class="name">Andrew G</span>
                     <picture>
                         <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                     </picture>
@@ -84,7 +84,7 @@ The crew from No Leak Gutters did an excellent job on my gutter repair project. 
                     Had a good experience with Nick and his crew for my gutter installation. They were friendly and got the job done without any issues 
                 </p>
                 <div class="star-group">
-                    <span class="name">Samatha H<span class="desc">Homeowner</span></span>
+                    <span class="name">Samatha H</span>
                     <picture>
                         <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
                     </picture>
