--- a/src/content/pages/Warranty.html
+++ b/src/content/pages/Warranty.html
@@ -71,10 +71,10 @@ At No Leak Gutters Inc, we are dedicated to providing you with top-quality gutte
         <div class="cs-image-group">
             <picture class="cs-picture">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/Pic3.jpg">
+                <source media="(max-width: 600px)" srcset="/assets/images/IMG_3059.JPG">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/Pic3.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/Pic3.jpg" alt="Gutter System" width="570" height="680" aria-hidden="true">
+                <source media="(min-width: 601px)" srcset="/assets/images/IMG_3059.JPG">
+                <img loading="lazy" decoding="async" src="/assets/images/IMG_3059.JPG" alt="Gutter System" width="570" height="680" aria-hidden="true">
             </picture>
         </div>
     </div>
