--- a/src/content/pages/Warranty.html
+++ b/src/content/pages/Warranty.html
@@ -28,7 +28,7 @@ eleventyNavigation:
             <h1 class="cs-title">5-year workmanship warranty, 10 year corner warranty, 20 year material warranty
             </h1>
             <p>
-At No Leak Gutters Inc, we are dedicated to providing you with top-quality gutter solutions that stand the test of time. With years of experience and a commitment to excellence, we are proud to offer comprehensive warranties to ensure your peace of mind. </p>
+We, No Leak Gutters Inc, are dedicated to providing you with top-quality gutter solutions that stand the test of time. With years of experience and a commitment to excellence, we are proud to offer comprehensive warranties to ensure your peace of mind. Once the party(s) accept this offer, this warranty comes into effect </p>
 
  <h3>5-Year Workmanship Warranty</h3>
 
@@ -49,7 +49,7 @@ At No Leak Gutters Inc, we are dedicated to providing you with top-quality gutte
                 <li>Guarantees longevity and performance of high-grade materials.</li>
                 <li>Covers resistance to rust, splitting, or cracking.</li>
             </ul>
-             <h3>Claims Process</h3>
+             <h3>Claims Process:</h3>
 
                  <ul>
                 <li>Submit written notice of the claim, copy of original contract, picture of alleged defect, and statement within 30 days.</li>
@@ -59,7 +59,7 @@ At No Leak Gutters Inc, we are dedicated to providing you with top-quality gutte
      
          <div class="cs-button-group">
        <a href="/contact" class="cs-button-solid">Claim Warranty</a>
-       <a href="/assets/images/Workmanship Warranty.pdf" class="cs-button-solid" download="Workmanship Warranty">Technical Document</a>
+       <a href="/assets/images/Full Workmanship Warranty.pdf" class="cs-button-solid" download="Workmanship Warranty">Technical Document</a>
        </div>
        </div>
        
