--- a/src/content/pages/Warranty.html
+++ b/src/content/pages/Warranty.html
@@ -25,7 +25,7 @@ eleventyNavigation:
         <div class="cs-content">
 
 
-            <h1 class="cs-title">5-year workmanship warranty, 10 year corner warranty, 20 year material warranty
+            <h1 class="cs-title">Warranty Page
             </h1>
             <p>
 We, No Leak Gutters Inc, are dedicated to providing you with top-quality gutter solutions that stand the test of time. With years of experience and a commitment to excellence, we are proud to offer comprehensive warranties to ensure your peace of mind. Once the party(s) accept this offer, this warranty comes into effect </p>
