--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-flex-group">
             <span class="cs-topper">Treating Your Home Like Our Own</span>
-            <h1 class="cs-title">LOCAL GUTTER INSTALLATION COMPANY</h1>
+            <h1 class="cs-title">GUTTER INSTALLATION COMPANY IN FLORIDA</h1>
             <p class="cs-text">
                 Serving Floridans with <i>quality</i> gutters since 2009
             </p>
